--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,69 +4,108 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg3">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="597dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="6dp">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView3"
             android:layout_width="match_parent"
-            android:layout_height="35dp" />
+            android:layout_height="151dp"
+            android:text="TextView" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
+            android:layout_height="120dp"
             android:orientation="horizontal">
 
             <Space
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="98dp"
+                android:layout_height="71dp"
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="175dp"
-                android:layout_height="47dp"
+                android:id="@+id/textView2"
+                android:layout_width="17dp"
+                android:layout_height="71dp"
                 android:layout_weight="1"
-                android:text="Today's fortune:"
-                tools:textSize="30sp" />
-
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="19dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:inputType="number"
-                android:text="100"
-                tools:textSize="24sp" />
+                android:gravity="center_horizontal"
+                android:textColor="@android:color/holo_orange_light"
+                android:textSize="50sp" />
 
             <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="85dp"
+                android:layout_height="71dp"
                 android:layout_weight="1" />
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="378dp"
-            android:gravity="bottom"
-            android:orientation="vertical">
+            android:layout_height="60sp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="240dp"
+                android:layout_height="40sp"
+                android:layout_weight="1"
+                android:gravity="top"
+                android:text="        Birthday(mmdd):"
+                android:textColor="@android:color/white"
+                android:textSize="30sp" />
 
             <EditText
-                android:id="@+id/editText2"
-                android:layout_width="match_parent"
-                android:layout_height="352dp"
+                android:id="@+id/editText"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:ems="10"
-                android:gravity="bottom"
-                android:inputType="textMultiLine" />
+                android:gravity="left"
+                android:inputType="number"
+                android:textColor="@android:color/white"
+                android:textSize="30sp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:orientation="vertical"></LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="fill_horizontal"
+                android:text="Today's fortune message..."
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+
+            <Space
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
